Fixed layout bug when content is bigger than window

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,93 +1,8 @@
-.remBlockButton, .addBlockButton {    
-    border-radius: 3px;
-    font-weight: bold;
-    text-align:center;
-    font-size:120%;
-    padding:4px;
-    width:100%;
+div.codeblocks {
+    max-width: 1920px;
+}
+
+div#mainspacekeeper > div.row {
     display:block;
-}
-
-.remBlockButton {
-    margin-top:2px!important;
-    border:1px dashed rgb(128, 48, 48);
-    color:rgb(128, 48, 48);
-    background-color:rgb(240, 220, 220);  
-}
-
-.remBlockButton:hover {
-    background-color:rgb(241, 48, 48);
-    color:white;
-}
-
-.addBlockButton {
-    border:1px dashed gray;
-    color:black;
-    background-color:rgb(235, 235, 235);    
-}
-
-.addBlockButton:hover{
-    background-color:rgb(245, 245, 245);
-}
-
-.hideBlockButton{
-    display:none!important;
-}
-
-.hiddenBlock{
-    display:none!important;
-}
-
-.hideBlockButton, .hiddenBlock{    
-    opacity:0;
-    visibility: hidden;
-}
-
-.BlockContainer{
-    margin-bottom:20px;
-}
-
-#blockTemplate{
-    display:none;
-}
-
-playground{
-    display:block;
-}
-
-.assCodeQuestionCanvas{
-    width:100%;
-    height:200px;
-    border:1px dashed rgb(128, 48, 48, 0.66);
-    border-radius: 3px;
-    background-color:rgba(255, 255, 255, 0.63766);
-    margin-top:4px;
-    margin-bottom:4px;
-
-    transition: opacity 600ms, visibility 600ms;
-}
-
-hl {
-    display:inline!important;
-    padding-top:0px!important;
-    padding-bottom:0px!important;
-    padding-left:4px!important;
-    padding-right:4px!important;
-}
-
-.red-wave {
-    background: url("red-wave.png") repeat-x;
-    background-position-y: bottom;
-}
-
-.yellow-wave {
-    background: url("yellow-wave.png") repeat-x;
-    background-position-y: bottom;
-}
-
-.gutter-error {
-    color: red;
-}
-.gutter-warning {
-    color: #b8a600;
+    flex-wrap: nowrap;
 }
